--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,118 @@
     transform: rotate(360deg);
   }
 }
+
+.balloon {
+  display: inline-block;
+  padding: 10px 0 10px 15px;
+  font-family: "Open Sans", sans;
+  font-weight: 400;
+  color: #377D6A;
+  background: #efefef;
+  border: 0;
+  border-radius: 3px;
+  outline: 0;
+  text-indent: 60px;
+  transition: all .3s ease-in-out;
+}
+
+/*Wide Version - can be applied to more elements*/
+.balloon.wide {
+  text-indent: 200px;
+}
+
+.balloon::-webkit-input-placeholder {
+  color: #efefef;
+  text-indent: 0;
+  font-weight: 300;
+}
+
+.balloon+label {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 4rem;
+  padding: 5px 15px;
+  color: #032429;
+  font-size: 11px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 0 1px 0 rgba(19, 74, 70, 0);
+  transition: all .3s ease-in-out;
+  border-radius: 3px;
+  background: rgba(122, 184, 147, 0);
+}
+
+.balloon+label:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 0;
+  top: 100%;
+  left: 50%;
+  margin-left: -3px;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 3px solid rgba(122, 184, 147, 0);
+  transition: all .3s ease-in-out;
+}
+
+.balloon:focus,
+.balloon:active {
+  color: #377D6A;
+  /*Note !important*/
+  text-indent: 0 !important;
+  background: #fff;
+}
+
+.balloon:focus::-webkit-input-placeholder,
+.balloon:active::-webkit-input-placeholder {
+  color: #aaa;
+}
+
+.balloon:focus+label,
+.balloon:active+label {
+  color: #fff;
+  text-shadow: 0 1px 0 rgba(19, 74, 70, 0.4);
+  background: #7ab893;
+  transform: translateY(-40px);
+  padding-bottom: 20px;
+}
+
+.balloon:focus+label:after,
+.balloon:active+label:after {
+  border-top: 4px solid #7ab893;
+}
+
+#searchWeather {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 60px 30px;
+  background: #032429;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+
+
+#searchWeather:before {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  left: -5000px;
+  height: 100%;
+  width: 15000px;
+  z-index: -1;
+  background: inherit;
+}
+
+#searchWeather:first-child {
+  padding: 40px 30px;
+}
+
+#searchWeather span {
+  position: relative;
+  display: inline-block;
+  margin: 30px 10px;
+}
